Update aboutme.html ใหม่

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,16 @@
 <html>
   <body>
-    <h1> Welcome to Oshin bakery </h1>
-    <
-
+    <font color="Gray">
+    <h1 style="background-color: violet; color: black;">Welcome to our website</h1>
+    <h2>Chatbot are coming soon!</h2>
+    <img src="https://i.pinimg.com/564x/58/8a/e1/588ae16399021d819930991914c69717.jpg" alt="THank you" width="400" height="350">
+   
   </body>
 </html>
+
+</html> 
+  <body>
+      <font color="Blue">
+      <h3> Thank you for support </h3>
+      <P> admin by 703311 sec801 Group 1  </P>
+  </body>
